--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,79 @@
-.App {
+*{
+  padding: 0;
+  margin: 0;
+  font-family: serif, Georgia;
+}
+.app{
+  background: grey;
+}
+input{
+  padding: 10px;
+  width: 40%;
   text-align: center;
+  margin: 2% 15%;
+  background: green;
 }
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+button{
+  padding: 8px;
+  border-radius: 20px;
+  background: gray;
   color: white;
 }
+.bar{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2%;
+  height: 40px;
+  text-align: center;
+  padding: 20px;
+  background: grey;
+}
 
-.App-link {
-  color: #09d3ac;
+
+/*Log in page css*/
+.Login{
+  color: green;
+  padding: 50px;
+}
+.title{
+  text-align: center;
+  font-size: 35px;
+  background: grey;
+  
+}
+span{
+  color: black;
+  
+}
+form{
+  margin-bottom: 15%;
+  margin-top: 2%;
+}
+
+/*volume page css*/
+.volume{
+  margin: 2%;
+  padding-top: 5%;
+}
+.pieces{
+  display: flex;
+  justify-content: center;
+}
+.box{
+  width: 350px;
+  padding: 10px;
+  border: 1px solid black;
+  text-align: center;
+}
+.mode h4{
+  margin: 10%;
+}
+.notifications{
+  margin-top: 5%;
+  margin-left: 5%;
+}
+.sound button{
+    margin-left: 8%;
+}
+.switch{
 }
